--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .headerNavbar {
   display: inline-block;
 }
-#fond {
+#pageBackground {
   width: 100%;
   height: 2000px;
   position: fixed;
@@ -9,19 +9,19 @@
   z-index: -7;
   opacity: 0.5;
   }
-.fond {
+.pageBackground {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4)), url('../img/fond5.jpg');
 }
-.fond1 {
+.pageBackground1 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(100, 0, 0, 0.4)), url('../img/fond9.jpg');
 }
-.fond2 {
+.pageBackground2 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 100, 0, 0.4)), url('../img/fond11.jpg');
   }
-.fond3 {
+.pageBackground3 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../img/fond11.jpeg');
   }
-.fond4 {
+.pageBackground4 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../img/fond12.jpeg');
   }
 #divContent{
@@ -47,7 +47,7 @@ h1, h4, h2 {
 }
 .content {
   border-radius: 10px;
-  background-color: rgba(0, 50, 150, 0.2);
+  background-color: rgba(0, 50, 0, 0.2);
 
 }
 .parts {
@@ -70,7 +70,7 @@ h1, h4, h2 {
 #partf4 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(50, 150, 100, 0.4)), url('../img/fond10.jpg');
 }
-#exp {
+#exp, #contact {
   margin-top: 50px;
 }
 .contentCV {
@@ -80,6 +80,7 @@ h1, h4, h2 {
 }
 .parag {
   margin: 50px;
+  padding-top: 20px;
   text-align: center;
 }
 .foo {
