--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   top: 0px;
   z-index: -7;
   opacity: 0.5;
-  }
+}
 .pageBackground {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4)), url('../img/fond5.jpg');
 }
@@ -17,13 +17,13 @@
 }
 .pageBackground2 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 100, 0, 0.4)), url('../img/fond11.jpg');
-  }
+}
 .pageBackground3 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../img/fond11.jpeg');
-  }
+}
 .pageBackground4 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../img/fond12.jpeg');
-  }
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../img/fond1.jpg');
+}
 #divContent{
   width: 100%;
   height: 100vh;
@@ -48,6 +48,7 @@ h1, h4, h2 {
 .content {
   border-radius: 10px;
   background-color: rgba(0, 50, 0, 0.2);
+  margin: 30px;
 
 }
 .parts {
@@ -80,23 +81,24 @@ h1, h4, h2 {
 }
 .parag {
   margin: 50px;
-  padding-top: 20px;
+  padding-top: 5px;
   text-align: center;
 }
 .foo {
-    border: 3px solid black;
-    width: 100%;
-    height: 250px;
+  border: 3px solid black;
+  width: 100%;
+  height: 315px;
+  margin-bottom: 0px;
 }
 .pic1 {
-    width: 5%;
-    height: 85%;
+  width: 5%;
+  height: 85%;
 }
 .pic2 {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 .pic3 {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
