--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,11 @@ h1, h4, h2 {
   padding-top: 5px;
   text-align: center;
 }
+.quotes {
+  margin: 50px;
+  text-align: center;
+  font-size: 20px;
+}
 .foo {
   border: 3px solid black;
   width: 100%;
